--- a/classes/subclasses/radiant_wizard.org
+++ b/classes/subclasses/radiant_wizard.org
@@ -5,6 +5,8 @@
 #+author:   zfoteff
 #+date:     [2023-07-12 Wed]
 #+summary:  Radiant Wizard subclass description
------
-Radiant wizard
+#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="../../static/stylesheets/subclass-style.css" />
+#+BEGIN_CENTER
+[[[id:7d419730-2064-41f9-80ee-f24ed9b01ac7][Main Menu]]] [[[id:69ef1740-156a-4e42-9493-49ec80a4ac26][Classes]]] [[[id:3e1b93b3-f1ad-4148-bb16-5313b376a707][Wizard]]]
+#+END_CENTER
 -----
