--- a/classes/classes.org
+++ b/classes/classes.org
@@ -7,7 +7,10 @@
 #+date:     [2023-07-03 Mon]
 #+summary:  Campaign classes submenu
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="../static/stylesheets/subclass-style.css" />
-
+#+BEGIN_CENTER
+[[[id:7d419730-2064-41f9-80ee-f24ed9b01ac7][Main Menu]]]
+#+END_CENTER
+-----
 * [[id:8bb9a08a-97c0-4231-a002-ad7dcf83e4d8][Bard]]
 Support the rest of the party using your talents, or your "talents". Uses unique class abilities and spells, mostly using the *Charisma* stat
 * [[id:8bb9a08a-9770-4231-a002-ad7dcf83e4d8][Druid]]
@@ -20,7 +23,7 @@ Trust only in a higher power(s?) to achieve your goals. Uses weapons and unarmed
 Manipulate the world around you in a manner of your choosing. Uses spells primarily, cast using Wisdom.
 * [[id:3ffd4641-5357-4b49-822a-cc23c9b9e627][Prophet]]
 Chosen vessel of a particular God. Prophets do not know which God they channel at the beginning of the game. The prophet has a primary mission of discovering which God they are aligned to by learning about the religious system of the world.
-* Merchant
+* [[id:4d617f28-180d-4610-ad0e-a280e5c6b117][Merchant]]
 Buy low, sell high! Focus on acquiring as much money as possible; making trades and building a reputation across the cities of the world.
 * Warrior
 Hack, slash, pummel, and dominate your enemies on the way to victory. Uses weapons primarily.
