--- a/classes/prophet.org
+++ b/classes/prophet.org
@@ -6,3 +6,8 @@
 #+author:   zfoteff
 #+date:     [2023-07-25 Tue]
 #+summary:  Prophet class description
+#+BEGIN_CENTER
+[ [[org:dnd/dnd.org][Main Menu]] ] [ [[org:dnd/classes/classes.org][Classes]] ]
+#+END_CENTER
+-----
+Chosen vessel of a particular God. Prophets do not know which God they channel at the beginning of the game. The prophet has a primary mission of discovering which God they are aligned to by learning about the religious system of the world.
