--- a/dm-materials/enemies/enemies.org
+++ b/dm-materials/enemies/enemies.org
@@ -6,6 +6,8 @@
 #+date:     [2023-07-25 Tue]
 #+filetags: :enemy:DND:
 #+summary:  Index of all enemy types
+#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="../../static/stylesheets/default-style.css" />
+
+[[id:11747c43-8efb-4be0-95b3-6739f0bd8b90][Pirate Faction]]
 
 [[id:a1e62a88-5dac-46fc-9003-6766fb466b06][Goblin Faction]]
-[[id:11747c43-8efb-4be0-95b3-6739f0bd8b90][Pirate Faction]]
