--- a/classes/classes.org
+++ b/classes/classes.org
@@ -17,15 +17,15 @@ Support the rest of the party using your talents, or your "talents". Uses unique
 Work with the forces of nature to pursue your goals. Uses magic and alchemy primarily, cast using *Charisma* and *Wisdom*
 * [[id:3e1b93b3-f1ad-4148-bb16-5313b376a707][Wizard]]
 Become a powerful channel of the magical elements. Use spells primarily, cast using the character's *Intelligence* stat.
-* Monk
-Trust only in a higher power(s?) to achieve your goals. Uses weapons and unarmed strikes primarily.
+* [[id:940552be-47cf-48ff-8ca0-8c2b7f629052][Paladin]]
+Defend the faith and the faithful with the might of your god. Uses heavy weapons and some spellcasting.
 * [[id:f2323133-e17d-4cff-86db-415b72e6d42e][Sorcerer]]
-Manipulate the world around you in a manner of your choosing. Uses spells primarily, cast using Wisdom.
+Manipulate the world around you in a manner of your choosing with latent powers imbued in the user. Uses spells primarily, cast using Wisdom.
 * [[id:3ffd4641-5357-4b49-822a-cc23c9b9e627][Prophet]]
 Chosen vessel of a particular God. Prophets do not know which God they channel at the beginning of the game. The prophet has a primary mission of discovering which God they are aligned to by learning about the religious system of the world.
 * [[id:4d617f28-180d-4610-ad0e-a280e5c6b117][Merchant]]
 Buy low, sell high! Focus on acquiring as much money as possible; making trades and building a reputation across the cities of the world.
-* Warrior
+* [[id:1846aace-7d40-41af-95e6-4a4d72044af5][Warrior]]
 Hack, slash, pummel, and dominate your enemies on the way to victory. Uses weapons primarily.
 * [[id:0b7f7671-c4de-41e9-b199-4a9ceb6352d2][Rogue]]
 Sneak, steal, deceive, and assassinate those who oppose your endeavors. Attack using *Dexterity* and *Charisma*.
