--- a/dm-materials/material-guide.org
+++ b/dm-materials/material-guide.org
@@ -2,10 +2,15 @@
 :ID:       23919bd5-7bb0-4743-ae81-f07566cad236
 :END:
 #+title:    Material Guide
+#+filetags: :DND:DM:guide:
 #+author:   zfoteff
 #+date:     [2023-07-06 Thu]
-#+summary:  Strength and property guide for all item materials
-
+#+summary:  Details about each material type in the game and the damage types they deal
+#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="../static/stylesheets/default-style.css" />
+#+BEGIN_CENTER
+[ [[id:49c009a8-dbe3-4867-a616-60c55d87ed54][DM Menu]] ]
+#+END_CENTER
+-----
 Material list [high to low]: cosmic -> meteor, mithryl -> iron -> stone -> wooden
 
 * Cosmic
