--- a/player_introduction.org
+++ b/player_introduction.org
@@ -8,7 +8,7 @@
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="static/stylesheets/default-style.css" />
 
 #+BEGIN_CENTER
-[ [[org:dnd/dnd.org][Main Menu]] ] [ [[file:character-sheet.pdf][Blank Character Sheet]] ]
+[ [[id:7d419730-2064-41f9-80ee-f24ed9b01ac7][Main Menu]] ][ [[file:character-sheet.pdf][Blank Character Sheet]] ]
 #+END_CENTER
 -----
 Hello! This is going to be a lot at first, sorry about that. I've simplified where I can, but the initial setup is going to take a little bit of effort on your part. After that, we can get to the real fun.
