--- a/dm-materials/enemies/enemies.org
+++ b/dm-materials/enemies/enemies.org
@@ -11,3 +11,7 @@
 [[id:11747c43-8efb-4be0-95b3-6739f0bd8b90][Pirate Faction]]
 
 [[id:a1e62a88-5dac-46fc-9003-6766fb466b06][Goblin Faction]]
+
+Elves Faction
+
+Human Faction
