--- a/classes/paladin.org
+++ b/classes/paladin.org
@@ -2,14 +2,17 @@
 :ID:       940552be-47cf-48ff-8ca0-8c2b7f629052
 :END:
 #+title:    Paladin
+#+filetags: :DND:paladin:
 #+author:   zfoteff
 #+date:     [2023-08-09 Wed]
 #+summary:  Paladin class
+#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="../static/stylesheets/subclass-style.css" />
 #+BEGIN_CENTER
-[ [[id:7d419730-2064-41f9-80ee-f24ed9b01ac7][Main Menu]] ] [ [[id:69ef1740-156a-4e42-9493-49ec80a4ac26][Classes]] ]
+[[[id:7d419730-2064-41f9-80ee-f24ed9b01ac7][Main Menu]]] [[[id:69ef1740-156a-4e42-9493-49ec80a4ac26][Classes]]]
 #+END_CENTER
-
+-----
 Defend the faith and the faithful with the might of your god. Uses heavy weapons and some spellcasting.
 
 * Level-up
+
 * Footnotes
