--- a/classes/subclasses/muse.org
+++ b/classes/subclasses/muse.org
@@ -6,7 +6,6 @@
 #+date:     [2023-07-12 Wed]
 #+summary:  Bard class summary
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="../../static/stylesheets/subclass-style.css" />
-
 #+BEGIN_CENTER
 [[[id:DND][Main Menu]]] [[[id:campaign-classes][Character Selection]]] [[[id:campaign-classes][Classes]]] [[[id:8bb9a08a-97c0-4231-a002-ad7dcf83e4d8][Bard]]]
 #+END_CENTER
@@ -28,7 +27,7 @@ Gain _Spectral Manager_: The manager will keep you informed of any important cul
 
 Gain _Booking Agent_: Once per long rest, you many travel to any part of the world in a single day, and the agent will arrange travel free of cost.
 * Level 15
-Gain a Patron Demigod. One of the Demigods will adopt you as their muse, and once every 3 combat sessions, you may summon the Demigod to assist you. Note that not all Demigods are good fighters. Patron Demigods are automatically reassigned upon the death of the player's previous Demigod. Do with that what you will. There may be consequences if you disappoint your Patron with the music you play.
+Gain a Patron Demigod. One of the Demigods will adopt you as their muse, and once every 3 combat sessions, you may summon the Demigod to assist you. Note: that not all Demigods are good fighters. Patron Demigods are automatically reassigned upon the death of the player's previous Demigod. Do with that what you will. There may be consequences if you disappoint your Patron with the music you play.
 * Level 19
 Gain knowledge of the _*Eldrich Tunes*_: Upon playing the Eldrich Tunes to completion, one of the Old Gods will descend upon you to initiate an end-game level encounter. This will result in significant rewards for the actor, and potentially other players in the party.
 * Footnotes
