--- a/dm-materials/enemies/goblin-faction.org
+++ b/dm-materials/enemies/goblin-faction.org
@@ -11,6 +11,7 @@
 [ [[id:49c009a8-dbe3-4867-a616-60c55d87ed54][DM Menu]] ] [ [[id:69fc67b6-3d4a-451e-ab1e-e23bc20215ba][Enemies]] ]
 #+END_CENTER
 -----
+Shamanic
 * Basic Troops
 ** Gobling
 Fledgling Goblin. Essentially useless in combat other than as fodder.
